# serializer version: 1
# name: test_cover_entities[cover.door_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'garage',
      'friendly_name': 'Door 1',
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.door_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entities[cover.door_1].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.door_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tailwind',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '_3c_e9_e_6d_21_84_-door1',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entities[cover.door_1].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tailwind',
        '_3c_e9_e_6d_21_84_-door1',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tailwind',
    'model': 'iQ3',
    'model_id': None,
    'name': 'Door 1',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '10.10',
    'via_device_id': <ANY>,
  })
# ---
# name: test_cover_entities[cover.door_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'garage',
      'friendly_name': 'Door 2',
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.door_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entities[cover.door_2].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.door_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tailwind',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '_3c_e9_e_6d_21_84_-door2',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entities[cover.door_2].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tailwind',
        '_3c_e9_e_6d_21_84_-door2',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tailwind',
    'model': 'iQ3',
    'model_id': None,
    'name': 'Door 2',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '10.10',
    'via_device_id': <ANY>,
  })
# ---
